# Transpiler

./: BUILD.md  CMakeLists.txt  COMPILER_ARCHITECTURE.md  IMPLEMENTATION.md  INDEX.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_TRANSCOMPILER.md
app/: globals.css  layout.tsx  page.tsx
examples/: insert_example.sql  select_complex.sql  select_simple.sql  update_delete_example.sql
include/: ast.h  error_handler.h  icg_generator.h  lexer.h  parser.h  semantic_analyzer.h  symbol_table.h  token.h
lib/: transcompiler.ts
src/: ast.cpp  error_handler.cpp  icg_generator.cpp  lexer.cpp  main.cpp  parser.cpp  semantic_analyzer.cpp  symbol_table.cpp  token.cpp
tests/: CMakeLists.txt  test_compiler.cpp
